# mcp-autogui-multinode

./: .env.example  .gitignore  LICENSE  README.md  README_zh.md  main.py  mcp_local.py  pyproject.toml  tool.py
core/: config.py  constants.py  logger.py
mcp_server/: register.py
middleware/: auth.py  request_id.py
src/: common.py
src/computer/: base.py  client.py  computer_pyautogui.py  schema.py  tools.py
tests/: test_local_mcp_client.py  test_mcp_client.py  test_stdio_mcp_client.py
tool_server/: __init__.py
tool_server/api/: endpoint.py
tool_server/api/v1/: __init__.py  computer.py
