[project]
name = "mcp-autogui-multinode"
version = "0.1.0"
description = "MCP server for AutoGUI multi-node control"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "fastapi>=0.124.2",
    "uvicorn[standard]>=0.32.0",
    "fastmcp==2.13.3",
    "loguru>=0.7.2",
    "httpx>=0.28.1",
]

[dependency-groups]
gui = [
    "pillow>=12.0.0",
    "pyautogui>=0.9.54",
    "pyscreeze>=1.0.1",
]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.24.0",
]
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
